--- a/generators/templates/test.spec.tsx.hbs
+++ b/generators/templates/test.spec.tsx.hbs
@@ -1,14 +1,11 @@
 import '@testing-library/jest-dom/extend-expect';
-import { render, screen } from '@testing-library/react';
+import { renderWithTheme } from 'utils/tests/helpers'
+import { screen } from '@testing-library/react';
 
 import {{pascalCase name}} from '.';
 
 describe('<{{pascalCase name}} />', () => {
-	it('should render the heading', () => {
-		const { container } = render(<{{pascalCase name}} />);
-
-		const heading = screen.getByRole('heading', { name: /{{pascalCase name}}/i });
-
-		expect(heading).toBeInTheDocument();
+	it('should render the {{pascalCase name}}', () => {
+		renderWithTheme(<{{pascalCase name}} />);
 	});
 });
